@@ -1,10 +1,13 @@
+[![Build Status](https://travis-ci.org/pjfl/p5-file-dataclass.svg?branch=master)](https://travis-ci.org/pjfl/p5-file-dataclass)
+[![CPAN version](https://badge.fury.io/pl/File-DataClass.svg)](http://badge.fury.io/pl/File-DataClass)
+
 # Name
 
 File::DataClass - Structured data file IO with OO paradigm
 
 # Version
 
-This document describes version v0.45.$Rev: 2 $ of [File::DataClass](https://metacpan.org/pod/File::DataClass)
+This document describes version v0.45.$Rev: 3 $ of [File::DataClass](https://metacpan.org/pod/File::DataClass)
 
 # Synopsis
 
