@@ -1,5 +1,6 @@
 Revision history for File::DataClass
 
+          - Added Travis integration and badges
           - Adjusted toolchain for Github
 
 0.45.1    2014-08-18 23:58:19
